--- a/views/partials/bio-evil.handlebars
+++ b/views/partials/bio-evil.handlebars
@@ -3,3 +3,7 @@
 <p>I was born good...</p>
 
 <p>...but life turned me bad!</p>
+
+{{#if insane}}
+	<p>I ASSASSINATED LEE HARVEY OSWALD!!!</p>
+{{/if}}
