--- a/views/partials/bio-evil.handlebars
+++ b/views/partials/bio-evil.handlebars
@@ -7,3 +7,6 @@
 {{#if insane}}
 	<p>I ASSASSINATED LEE HARVEY OSWALD!!!</p>
 {{/if}}
+{{#if boring}}
+  <p>I always wanted to work at the IRS.</p>
+{{/if}}
