--- a/views/partials/bio-good.handlebars
+++ b/views/partials/bio-good.handlebars
@@ -7,3 +7,6 @@
 {{#if insane}}
 	<p>I AM THE QUEEN OF THE UNICORNS!!!</p>
 {{/if}}
+{{#if boring}}
+  <p>I became a taste-tester for gruel.</p>
+{{/if}}
